tests/fail/stable/missing_type.stderr
error: more placeholders than types provided:
       At "asdf{}{}asdf{}"
                 ^^
 --> tests/fail/stable/missing_type.rs:2:26
  |
2 |     sscanf::scanf!("hi", "asdf{}{}asdf{}", usize);
  |                          ^^^^^^^^^^^^^^^^

error: more placeholders than types provided:
       At "asdf{}{}asdf{}"
                       ^^
 --> tests/fail/stable/missing_type.rs:2:26
  |
2 |     sscanf::scanf!("hi", "asdf{}{}asdf{}", usize);
  |                          ^^^^^^^^^^^^^^^^

error: more placeholders than types provided:
       At "asdf{}{usize}as{}df{i32}"
                          ^^
 --> tests/fail/stable/missing_type.rs:3:26
  |
3 |     sscanf::scanf!("hi", "asdf{}{usize}as{}df{i32}", usize);
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^
